[package]
name = "flatvec"
version = "0.2.0"
authors = ["Ben Kimock <kimockb@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = """
An indirection-collapsing container that stores all its elements in at most 2 allocations
"""

[dependencies]
smallvec = { version = "1.4", features = ["union"], optional = true }

[dev-dependencies]
libflate = "1.0"
