[package]
name = "flatvec"
version = "0.2.0"
authors = ["Ben Kimock <kimockb@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = """
An indirection-collapsing container that stores all its elements in at most 2 allocations
"""
repository = "https://github.com/saethlin/flatvec"
exclude = [
    ".gitignore",
    ".github/*",
]

[dependencies]
tinyvec = { version = "1.5", features = ["alloc", "rustc_1_55"] }

[dev-dependencies]
libflate = "1.0"

[profile.release]
codegen-units = 1
debug = 2
